--- a/test/testing.css
+++ b/test/testing.css
@@ -7,3 +7,7 @@
 	display: flex;
 	gap: 2em;
 }
+
+.test {
+	margin: 10px;
+}
